# youtube-spam-detection

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml
youtube_spam_detection/: __main__.py  config.py
